fix content not wrap

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -10,6 +10,7 @@
     height: 220px;
     border-radius: 5%;
     overflow: visible;
+    min-height: fit-content;
 }
 
 .my-blog-background {
